2476 [Queue]              removed general check for missing packages at queue start
     [Update]             automatically download needed and missing packages after confirmation if the package was disabled (regression of 2471)
2475 [Audio Encoder]      added needed ConvertAudioToFloat() for AviSynth+
2474 [AVS Script Creator] fixed path for Yadif and BassAudioSource (regression of 2471)
2473 [Update]             fixed error if auto update is disabled (regression of 2471)
2472 [Update]             required packages are always enabled
2471 [Update]             merged some avisynth plugins into one package
     [Update]             fixed problem with the installation of the avs package
     [Update]             internal optimizations
2470 [AVS Script Creator] fixed sometimes using VobSub instead of TextSub
2469 [FFMS Indexer]       do not index audio tracks if they will be demuxed
2468 [MKV Demuxer]        if a delay is needed e.g. "Delay 123ms" (instead of "123ms") will be added to the demuxed file name
2467 [OneClick]           "Don't encode video" is now used for all containers
     [OneClick]           improved detection of suitable output containers
2466 [Update]             automatically download needed and missing packages after confirmation if the package was disabled
2465 [Queue]              changed default main window size and queue column size
2464 [x264]               fixed --sar detection for 720x480 if using the Blu-ray target device
2463 [AVS Script Creator] improved anamorphic calculation. if the output DAR is the same as the input DAR 
     +[OneClick]             it will not be rounded within the "acceptable anamorhphic aspect error" tolerance
2462 [Update]             improved status handling
     [Update]             cosmetics
2461 [L-SMASH Indexer]    renamed to L-SMASH Works
     [L-SMASH Indexer]    internal optimizations
2460 [Update]             if external tools are disabled in the settings they are also disabled for updates